GH-3249 adjusting delivery methods elements alignment to fix mobile bug

--- a/projects/storefrontstyles/scss/components/checkout/steps/shipping-method/_delivery-mode.scss
+++ b/projects/storefrontstyles/scss/components/checkout/steps/shipping-method/_delivery-mode.scss
@@ -16,12 +16,13 @@
       justify-content: space-between;
       flex-wrap: wrap;
 
-      .cx-delivery-shipping {
-        flex: 50%;
+      .cx-delivery-mode {
+        flex: auto;
+        text-align: left;
       }
 
       .cx-delivery-price {
-        flex: 50%;
+        flex: auto;
         text-align: right;
       }
 
